# java-server

./: .gitignore  docker-compose.yml  pyproject.toml
actions/: start.sh  stop.sh
scripts/: cli.py
scripts/models/: __init__.py  server_status.py
scripts/utils/: docker.py  env.py  layout.py  logging.py  server.py
